--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,441 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/chapter-1.xhtml" epub:type="z3998:roman">I</a>
+					<ol>
+						<li>
+							<a href="text/chapter-1.xhtml#chapter-1-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-1.xhtml#chapter-1-2" epub:type="z3998:roman">II</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: Feet of Clay</a>
+					<ol>
+						<li>
+							<a href="text/chapter-2.xhtml#chapter-2-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-2.xhtml#chapter-2-2" epub:type="z3998:roman">II</a>
+						</li>
+						<li>
+							<a href="text/chapter-2.xhtml#chapter-2-3" epub:type="z3998:roman">III</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: The Fellowship of Grief</a>
+					<ol>
+						<li>
+							<a href="text/chapter-3.xhtml#chapter-3-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-3.xhtml#chapter-3-2" epub:type="z3998:roman">II</a>
+						</li>
+						<li>
+							<a href="text/chapter-3.xhtml#chapter-3-3" epub:type="z3998:roman">III</a>
+						</li>
+						<li>
+							<a href="text/chapter-3.xhtml#chapter-3-4" epub:type="z3998:roman">IV</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: One Dram of Joy must have a Pound of Care</a>
+					<ol>
+						<li>
+							<a href="text/chapter-4.xhtml#chapter-4-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-4.xhtml#chapter-4-2" epub:type="z3998:roman">II</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: Rascality Rejoices</a>
+					<ol>
+						<li>
+							<a href="text/chapter-5.xhtml#chapter-5-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-5.xhtml#chapter-5-2" epub:type="z3998:roman">II</a>
+						</li>
+						<li>
+							<a href="text/chapter-5.xhtml#chapter-5-3" epub:type="z3998:roman">III</a>
+						</li>
+						<li>
+							<a href="text/chapter-5.xhtml#chapter-5-4" epub:type="z3998:roman">IV</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: One Crowded Hour of Glorious Life</a>
+					<ol>
+						<li>
+							<a href="text/chapter-6.xhtml#chapter-6-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-6.xhtml#chapter-6-2" epub:type="z3998:roman">II</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: Two Interludes</a>
+					<ol>
+						<li>
+							<a href="text/chapter-7.xhtml#chapter-7-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-7.xhtml#chapter-7-2" epub:type="z3998:roman">II</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: The Beautiful Spaniard</a>
+					<ol>
+						<li>
+							<a href="text/chapter-8.xhtml#chapter-8-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-8.xhtml#chapter-8-2" epub:type="z3998:roman">II</a>
+						</li>
+						<li>
+							<a href="text/chapter-8.xhtml#chapter-8-3" epub:type="z3998:roman">III</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: A Hideous, Fearful Hour</a>
+					<ol>
+						<li>
+							<a href="text/chapter-9.xhtml#chapter-9-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-9.xhtml#chapter-9-2" epub:type="z3998:roman">II</a>
+						</li>
+						<li>
+							<a href="text/chapter-9.xhtml#chapter-9-3" epub:type="z3998:roman">III</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: The Grim Idol that the World Adores</a>
+					<ol>
+						<li>
+							<a href="text/chapter-10.xhtml#chapter-10-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-10.xhtml#chapter-10-2" epub:type="z3998:roman">II</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: Strange Happenings</a>
+					<ol>
+						<li>
+							<a href="text/chapter-11.xhtml#chapter-11-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-11.xhtml#chapter-11-2" epub:type="z3998:roman">II</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: Chauvelin</a>
+					<ol>
+						<li>
+							<a href="text/chapter-12.xhtml#chapter-12-1" epub:type="z3998:roman">I</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: The Fisherman’s Rest</a>
+					<ol>
+						<li>
+							<a href="text/chapter-13.xhtml#chapter-13-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-13.xhtml#chapter-13-2" epub:type="z3998:roman">II</a>
+						</li>
+						<li>
+							<a href="text/chapter-13.xhtml#chapter-13-3" epub:type="z3998:roman">III</a>
+						</li>
+						<li>
+							<a href="text/chapter-13.xhtml#chapter-13-4" epub:type="z3998:roman">IV</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: The Castaway</a>
+					<ol>
+						<li>
+							<a href="text/chapter-14.xhtml#chapter-14-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-14.xhtml#chapter-14-2" epub:type="z3998:roman">II</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: The Nest</a>
+					<ol>
+						<li>
+							<a href="text/chapter-15.xhtml#chapter-15-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-15.xhtml#chapter-15-2" epub:type="z3998:roman">II</a>
+						</li>
+						<li>
+							<a href="text/chapter-15.xhtml#chapter-15-3" epub:type="z3998:roman">III</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: A Lover of Sport</a>
+					<ol>
+						<li>
+							<a href="text/chapter-16.xhtml#chapter-16-1" epub:type="z3998:roman">I</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-17.xhtml"><span epub:type="z3998:roman">XVII</span>: Reunion</a>
+					<ol>
+						<li>
+							<a href="text/chapter-17.xhtml#chapter-17-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-17.xhtml#chapter-17-2" epub:type="z3998:roman">II</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-18.xhtml"><span epub:type="z3998:roman">XVIII</span>: Night and Morning</a>
+					<ol>
+						<li>
+							<a href="text/chapter-18.xhtml#chapter-18-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-18.xhtml#chapter-18-2" epub:type="z3998:roman">II</a>
+						</li>
+						<li>
+							<a href="text/chapter-18.xhtml#chapter-18-3" epub:type="z3998:roman">III</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-19.xhtml"><span epub:type="z3998:roman">XIX</span>: A Rencontre</a>
+					<ol>
+						<li>
+							<a href="text/chapter-19.xhtml#chapter-19-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-19.xhtml#chapter-19-2" epub:type="z3998:roman">II</a>
+						</li>
+						<li>
+							<a href="text/chapter-19.xhtml#chapter-19-3" epub:type="z3998:roman">III</a>
+						</li>
+						<li>
+							<a href="text/chapter-19.xhtml#chapter-19-4" epub:type="z3998:roman">IV</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-20.xhtml"><span epub:type="z3998:roman">XX</span>: Departure</a>
+					<ol>
+						<li>
+							<a href="text/chapter-20.xhtml#chapter-20-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-20.xhtml#chapter-20-2" epub:type="z3998:roman">II</a>
+						</li>
+						<li>
+							<a href="text/chapter-20.xhtml#chapter-20-3" epub:type="z3998:roman">III</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: Memories</a>
+					<ol>
+						<li>
+							<a href="text/chapter-21.xhtml#chapter-21-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-21.xhtml#chapter-21-2" epub:type="z3998:roman">II</a>
+						</li>
+						<li>
+							<a href="text/chapter-21.xhtml#chapter-21-3" epub:type="z3998:roman">III</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-22.xhtml"><span epub:type="z3998:roman">XXII</span>: Waiting</a>
+					<ol>
+						<li>
+							<a href="text/chapter-22.xhtml#chapter-22-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-22.xhtml#chapter-22-2" epub:type="z3998:roman">II</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-23.xhtml"><span epub:type="z3998:roman">XXIII</span>: Mice and Men</a>
+					<ol>
+						<li>
+							<a href="text/chapter-23.xhtml#chapter-23-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-23.xhtml#chapter-23-2" epub:type="z3998:roman">II</a>
+						</li>
+						<li>
+							<a href="text/chapter-23.xhtml#chapter-23-3" epub:type="z3998:roman">III</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-24.xhtml"><span epub:type="z3998:roman">XXIV</span>: By Order of the State</a>
+					<ol>
+						<li>
+							<a href="text/chapter-24.xhtml#chapter-24-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-24.xhtml#chapter-24-2" epub:type="z3998:roman">II</a>
+						</li>
+						<li>
+							<a href="text/chapter-24.xhtml#chapter-24-3" epub:type="z3998:roman">III</a>
+						</li>
+						<li>
+							<a href="text/chapter-24.xhtml#chapter-24-4" epub:type="z3998:roman">IV</a>
+						</li>
+						<li>
+							<a href="text/chapter-24.xhtml#chapter-24-5" epub:type="z3998:roman">V</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-25.xhtml"><span epub:type="z3998:roman">XXV</span>: Four Days</a>
+					<ol>
+						<li>
+							<a href="text/chapter-25.xhtml#chapter-25-1" epub:type="z3998:roman">I</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-26.xhtml"><span epub:type="z3998:roman">XXVI</span>: A Dream</a>
+					<ol>
+						<li>
+							<a href="text/chapter-26.xhtml#chapter-26-1" epub:type="z3998:roman">I</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-27.xhtml"><span epub:type="z3998:roman">XXVII</span>: Terror or Ambition</a>
+					<ol>
+						<li>
+							<a href="text/chapter-27.xhtml#chapter-27-1" epub:type="z3998:roman">I</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: In the Meanwhile</a>
+					<ol>
+						<li>
+							<a href="text/chapter-28.xhtml#chapter-28-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-28.xhtml#chapter-28-2" epub:type="z3998:roman">II</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-29.xhtml"><span epub:type="z3998:roman">XXIX</span>: The Close of the Second Day</a>
+					<ol>
+						<li>
+							<a href="text/chapter-29.xhtml#chapter-29-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-29.xhtml#chapter-29-2" epub:type="z3998:roman">II</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-30.xhtml"><span epub:type="z3998:roman">XXX</span>: When the Storm Burst</a>
+					<ol>
+						<li>
+							<a href="text/chapter-30.xhtml#chapter-30-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-30.xhtml#chapter-30-2" epub:type="z3998:roman">II</a>
+						</li>
+						<li>
+							<a href="text/chapter-30.xhtml#chapter-30-3" epub:type="z3998:roman">III</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-31.xhtml"><span epub:type="z3998:roman">XXXI</span>: Our Lady of Pity</a>
+					<ol>
+						<li>
+							<a href="text/chapter-31.xhtml#chapter-31-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-31.xhtml#chapter-31-2" epub:type="z3998:roman">II</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-32.xhtml"><span epub:type="z3998:roman">XXXII</span>: Grey Dawn</a>
+					<ol>
+						<li>
+							<a href="text/chapter-32.xhtml#chapter-32-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-32.xhtml#chapter-32-2" epub:type="z3998:roman">II</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-33.xhtml"><span epub:type="z3998:roman">XXXIII</span>: The Cataclysm</a>
+					<ol>
+						<li>
+							<a href="text/chapter-33.xhtml#chapter-33-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-33.xhtml#chapter-33-2" epub:type="z3998:roman">II</a>
+						</li>
+						<li>
+							<a href="text/chapter-33.xhtml#chapter-33-3" epub:type="z3998:roman">III</a>
+						</li>
+					</ol>
+				</li>
+				<li>
+					<a href="text/chapter-34.xhtml"><span epub:type="z3998:roman">XXXIV</span>: The Whirlwind</a>
+					<ol>
+						<li>
+							<a href="text/chapter-34.xhtml#chapter-34-1" epub:type="z3998:roman">I</a>
+						</li>
+						<li>
+							<a href="text/chapter-34.xhtml#chapter-34-2" epub:type="z3998:roman">II</a>
+						</li>
+						<li>
+							<a href="text/chapter-34.xhtml#chapter-34-3" epub:type="z3998:roman">III</a>
+						</li>
+						<li>
+							<a href="text/chapter-34.xhtml#chapter-34-4" epub:type="z3998:roman">IV</a>
+						</li>
+						<li>
+							<a href="text/chapter-34.xhtml#chapter-34-5" epub:type="z3998:roman">V</a>
+						</li>
+						<li>
+							<a href="text/chapter-34.xhtml#chapter-34-6" epub:type="z3998:roman">VI</a>
+						</li>
+						<li>
+							<a href="text/chapter-34.xhtml#chapter-34-7" epub:type="z3998:roman">VII</a>
+						</li>
+					</ol>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -34,7 +468,7 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">The Triumph of the Scarlet Pimpernel</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
