--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -56,7 +56,7 @@
 					</ol>
 				</li>
 				<li>
-					<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: One Dram of Joy must have a Pound of Care</a>
+					<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: One Dram of Joy Must Have a Pound of Care</a>
 					<ol>
 						<li>
 							<a href="text/chapter-4.xhtml#chapter-4-1" epub:type="z3998:roman">I</a>
@@ -134,7 +134,7 @@
 					</ol>
 				</li>
 				<li>
-					<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: The Grim Idol that the World Adores</a>
+					<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: The Grim Idol That the World Adores</a>
 					<ol>
 						<li>
 							<a href="text/chapter-10.xhtml#chapter-10-1" epub:type="z3998:roman">I</a>
