--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -21,13 +21,13 @@
 			and is based on a transcription produced in 2006 by<br/>
 			<b class="name">Richard Scott</b> and <b class="name">Colin Choat</b><br/>
 			for<br/>
-			<a href="http://gutenberg.net.au/ebooks06/0602601h.html">Project Gutenberg</a><br/>
+			<a href="http://gutenberg.net.au/ebooks06/0602601h.html">Project Gutenberg Australia</a><br/>
 			and on digital scans available at<br/>
 			<a href="https://www.google.com/books/edition/The_Triumph_of_the_Scarlet_Pimpernel/JWeIDnx3LaAC">Google Books</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
-			a painting completed in YEAR by<br/>
-			<a href="ARTIST_WIKI_URL">ARTIST</a>.<br/>
+			<i epub:type="se:name.visual-art.painting">Portrait de Theresia Cabarrus</i>,<br/>
+			a painting completed in 1805 by<br/>
+			<a href="https://en.wikipedia.org/wiki/François_Gérard">François Gérard</a>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
