--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -15,6 +15,9 @@
 				</li>
 				<li>
 					<a href="text/chapter-1.xhtml" epub:type="z3998:roman">I</a>
+				</li>
+				<li>
+					<a href="text/chapter-1.xhtml#chapter-1">“The Everlasting Stars Look Down, Like Glistening Eyes Bright with Immortal Pity, Over the Lot of Man.”</a>
 					<ol>
 						<li>
 							<a href="text/chapter-1.xhtml#chapter-1-1" epub:type="z3998:roman">I</a>
@@ -157,11 +160,6 @@
 				</li>
 				<li>
 					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: Chauvelin</a>
-					<ol>
-						<li>
-							<a href="text/chapter-12.xhtml#chapter-12-1" epub:type="z3998:roman">I</a>
-						</li>
-					</ol>
 				</li>
 				<li>
 					<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: The Fisherman’s Rest</a>
@@ -207,11 +205,6 @@
 				</li>
 				<li>
 					<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: A Lover of Sport</a>
-					<ol>
-						<li>
-							<a href="text/chapter-16.xhtml#chapter-16-1" epub:type="z3998:roman">I</a>
-						</li>
-					</ol>
 				</li>
 				<li>
 					<a href="text/chapter-17.xhtml"><span epub:type="z3998:roman">XVII</span>: Reunion</a>
@@ -330,27 +323,12 @@
 				</li>
 				<li>
 					<a href="text/chapter-25.xhtml"><span epub:type="z3998:roman">XXV</span>: Four Days</a>
-					<ol>
-						<li>
-							<a href="text/chapter-25.xhtml#chapter-25-1" epub:type="z3998:roman">I</a>
-						</li>
-					</ol>
 				</li>
 				<li>
 					<a href="text/chapter-26.xhtml"><span epub:type="z3998:roman">XXVI</span>: A Dream</a>
-					<ol>
-						<li>
-							<a href="text/chapter-26.xhtml#chapter-26-1" epub:type="z3998:roman">I</a>
-						</li>
-					</ol>
 				</li>
 				<li>
 					<a href="text/chapter-27.xhtml"><span epub:type="z3998:roman">XXVII</span>: Terror or Ambition</a>
-					<ol>
-						<li>
-							<a href="text/chapter-27.xhtml#chapter-27-1" epub:type="z3998:roman">I</a>
-						</li>
-					</ol>
 				</li>
 				<li>
 					<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: In the Meanwhile</a>
