--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,10 +14,7 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="z3998:roman">I</a>
-				</li>
-				<li>
-					<a href="text/chapter-1.xhtml#chapter-1">“The Everlasting Stars Look Down, Like Glistening Eyes Bright with Immortal Pity, Over the Lot of Man.”</a>
+					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: “The Everlasting Stars Look Down, Like Glistening Eyes Bright with Immortal Pity, Over the Lot of Man.”</a>
 					<ol>
 						<li>
 							<a href="text/chapter-1.xhtml#chapter-1-1" epub:type="z3998:roman">I</a>
