Update URLs to HTTPS

--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -21,7 +21,7 @@
 			and is based on a transcription produced in 2006 by<br/>
 			<b epub:type="z3998:personal-name">Richard Scott</b> and <b epub:type="z3998:personal-name">Colin Choat</b><br/>
 			for<br/>
-			<a href="http://gutenberg.net.au/ebooks06/0602601h.html">Project Gutenberg Australia</a><br/>
+			<a href="https://gutenberg.net.au/ebooks06/0602601h.html">Project Gutenberg Australia</a><br/>
 			and on digital scans available at<br/>
 			<a href="https://www.google.com/books/edition/The_Triumph_of_the_Scarlet_Pimpernel/JWeIDnx3LaAC">Google Books</a>.</p>
 			<p>The cover page is adapted from<br/>
