--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -22,7 +22,7 @@
 			<b epub:type="z3998:personal-name">Richard Scott</b> and <b epub:type="z3998:personal-name">Colin Choat</b><br/>
 			for<br/>
 			<a href="https://gutenberg.net.au/ebooks06/0602601h.html">Project Gutenberg Australia</a><br/>
-			and on digital scans available at<br/>
+			and on digital scans from<br/>
 			<a href="https://www.google.com/books/edition/The_Triumph_of_the_Scarlet_Pimpernel/JWeIDnx3LaAC">Google Books</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Portrait de Theresia Cabarrus</i>,<br/>
